experiment/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  namespace: experiment
  labels:
    app: webapp
spec:
  type: NodePort
  selector:
    app: webapp
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
