experiment/webapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: experiment
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: letsencrypt-staging
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - webapp.viq.local
      secretName: webapp-local-tls
  rules:
    - host: webapp.viq.local
      http:
        paths:
          - path: /mywebapp
            pathType: Prefix
            backend:
              service:
                name: webapp-service
                port:
                  number: 80
